--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(mpd-discord-rpc)
 
 set(SOURCES
   src/main.c
+  src/mpdclient.c
   )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
+target_link_libraries(${PROJECT_NAME} mpdclient)
